--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,22 +13,24 @@
                     <div class="card-body p-0">
                         <!-- Nested Row within Card Body -->
                         <div class="row">
-                            <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
+                            <div class="col-lg-6">
+                                <img src="/images/img/rbcamp.png" class="main-logo">
+                            </div>
                             <div class="col-lg-6">
                                 <div class="p-5">
                                     <div class="text-center">
                                         <h1>Point Of Sales</h1><hr>
                                         <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
                                     </div>
-                                    <form class="user">
+                                    <form class="user" action="" method="post">
                                         <div class="form-group">
                                             <input type="email" class="form-control form-control-user"
-                                                id="exampleInputEmail" aria-describedby="emailHelp"
+                                                id="email" name="email" aria-describedby="emailHelp"
                                                 placeholder="Enter Email Address...">
                                         </div>
                                         <div class="form-group">
                                             <input type="password" class="form-control form-control-user"
-                                                id="exampleInputPassword" placeholder="Password">
+                                                id="password" name="password" placeholder="Password">
                                         </div>
                                         <div class="form-group">
                                             <div class="custom-control custom-checkbox small">
@@ -37,13 +39,19 @@
                                                     Me</label>
                                             </div>
                                         </div>
-                                        <a href="/index" class="btn btn-primary btn-user btn-block">
+                                        <button type="submit" class="btn btn-primary btn-user btn-block">
                                             Login
-                                        </a>
+                                        </button>
+                                        <% if(info.length > 0) { %>
+                                        <div class="alert alert-danger" role="alert">
+                                            <%= info %>
+                                          </div>
+                                          <% } %>
                                     </form>
                                     <hr>
                                     <div class="text-center">
-                                        <a class="small" href="">Forgot Password?</a>
+                                        <a class="small" href="">Forgot Password?</a><br>
+                                        <a class="small" href="/register">Don't have a account? Sign up</a>
                                     </div>
                                 </div>
                             </div>
